tests/workspaces_test/workspaces_test.exp
Error: bar/index.js:8
  8: export const bWorkspaceType: WorkspaceType = 123; // Error: number ~> string
                                                  ^^^ number. This type is incompatible with
  8: export const bWorkspaceType: WorkspaceType = 123; // Error: number ~> string
                                  ^^^^^^^^^^^^^ WorkspaceType

Error: foo/index.js:10
 10: export const bWorkspaceType: WorkspaceType = '123'; // Error: string ~> number
                                                  ^^^^^ string. This type is incompatible with
 10: export const bWorkspaceType: WorkspaceType = '123'; // Error: string ~> number
                                  ^^^^^^^^^^^^^ WorkspaceType


Found 2 errors
